--- a/styles/style.css
+++ b/styles/style.css
@@ -161,6 +161,7 @@ header, main {
   display: flex;
   gap: 28px;
   flex-wrap: wrap;
+  margin-bottom: 120px;
 }
 .image2{
    display: flex;
@@ -259,6 +260,44 @@ header, main {
   border-radius: 22px;
 }
 
+/* join section style */
+.join-section{
+  text-align: center;
+  background: url(../assets/news-letter-bg.png);
+  background-repeat: no-repeat;
+  background-size: cover;
+  width: 100%;
+  height: 533px;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.join-section h3{
+  margin-bottom: 23px;
+  color: #FFFFFF;
+}
+.join-section input{
+  width: 640px;
+  height: 50px;
+  padding-left: 20px;
+  margin-right: 0px;
+}
+.join-section button{
+  width: 186px;
+  height: 55px;
+  font-weight: 600;
+  background-color: #E95A08;
+  color: #FFFFFF;
+  border-style: none;
+  margin-left: 0px;
+}
+.inptbtn{
+  display: flex;
+}
+button:hover{
+  cursor: pointer;
+}
 
 
 /* responsive style */
@@ -344,6 +383,7 @@ header, main {
     /* latest deal  */
     .image-container{
       flex-direction: column;
+      margin-bottom: 50px;
     }
     .jabo{
       min-height: 206px;
@@ -364,5 +404,18 @@ header, main {
     .deals{
       margin-bottom: 50px;
     }
-    
+
+    /* join section */
+    .join-section h3{
+        font-size: 1.5rem;
+    }
+    .join-section input{
+      width: 218px;
+    }
+    .join-section button{
+      width: 103px;
+    }
+    .join-section{
+      height: 275px;
+    }
   }
