--- a/styles/style.css
+++ b/styles/style.css
@@ -272,6 +272,7 @@ header, main {
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  margin-bottom: 70px;
 }
 .join-section h3{
   margin-bottom: 23px;
@@ -297,6 +298,32 @@ header, main {
 }
 button:hover{
   cursor: pointer;
+}
+
+/* footer style */
+.footer{
+  width: 80%;
+  margin: 0px auto 70px;
+  display: flex;
+  justify-content: space-between;
+}
+.logo{
+  width: 359px;
+}
+.link{
+  display: flex;
+  flex-direction: column;
+  gap: 44px;
+}
+.link a{
+   text-decoration: none;
+   color: #8987A1;
+}
+.icon .twitter{
+  margin-bottom: 8px;
+}
+.icon img{
+  margin-left: 24px;
 }
 
 
@@ -418,4 +445,25 @@ button:hover{
     .join-section{
       height: 275px;
     }
+
+    /* footer */
+    .footer{
+      width: 96%;
+      flex-direction: column;
+      margin: 50px auto;
+    }
+    .logo{
+      width: 100%;
+    }
+    .logo p{
+      margin-bottom: 44px;
+    }
+    .link{
+      margin-bottom: 44px;
+    }
+    .icon .linkdin{
+     margin-left: 0px;
+    }
+    
+  
   }
